--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="audio"></div>
         <div class="not_found"></div>
     </section>
-
+    <p> This Is A Dictionary</p>
     <script src="app.js"></script>
 </body>
 </html>
